@@ -8,7 +8,7 @@ importFrom("sandwich", "estfun", "bread")
 importFrom("stats", "simulate", "variable.names", "model.matrix", "logLik",
            "vcov", "AIC", "coef", "confint", "dlogis", "dnorm",
            "lm.fit", "plogis", "pnorm", "predict", "qlogis", "qnorm",
-           "runif", "stepfun", "weights", "approxfun", "xtabs")
+           "runif", "stepfun", "weights", "approxfun", "xtabs", "resid")
 
 # importFrom("quadprog", "solve.QP")
 importFrom("coneproj", "qprog")
@@ -69,5 +69,6 @@ S3method("as.Surv", "response")
 #S3method("paraboot", "mlt")
 
 S3method("estfun", "mlt")
+S3method("residuals", "mlt")
 S3method("bread", "mlt")
 S3method("bread", "mlt_fit")
